--- a/math-tutor-backend/requirements.txt
+++ b/math-tutor-backend/requirements.txt
@@ -9,6 +9,7 @@ python-dotenv==1.0.1
 # --- Security & Authentication ---
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.3.0
 python-multipart==0.0.7
 
 # --- Database (SQLAlchemy) ---
