--- a/math-tutor-backend/requirements.txt
+++ b/math-tutor-backend/requirements.txt
@@ -2,6 +2,11 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 
+# Pin these three specifically to fix the 'proxies' error
+openai==1.12.0
+httpx==0.27.2
+httpcore==1.0.2
+
 # --- AI & LLM ---
 openai==1.12.0
 python-dotenv==1.0.1
