--- a/math-tutor-backend/requirements.txt
+++ b/math-tutor-backend/requirements.txt
@@ -16,6 +16,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
 python-multipart==0.0.7
+argon2-cffi==23.1.0
 
 # --- Database (SQLAlchemy) ---
 sqlalchemy==2.0.25
